plugins {
    id 'version-catalog'
    id 'net.fabricmc.fabric-loom' version '1.15.+'
    id "me.modmuss50.mod-publish-plugin" version "2.2.0"
}

apply plugin: 'net.fabricmc.fabric-loom'


var isStable = project.is_stable == "true"

base {
    archivesName = "polymer-bundled"
}
version = project.mod_version + "+" + project.minecraft_version
group = project.maven_group

var field = com.google.gson.Gson.class.getDeclaredField("prettyPrinting");
field.setAccessible(true);
field.setBoolean(net.fabricmc.loom.LoomGradlePlugin.GSON, false);


System.out.println(isStable ? "release" : "beta")

allprojects {
    processResources {
        inputs.property "version", project.version

        filesMatching("fabric.mod.json") {
            expand "version": project.version
        }
    }
}

allprojects {
    apply plugin: 'net.fabricmc.fabric-loom'

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 25
    }

    javadoc {
        destinationDir = file("${buildDir}/docs/javadoc")
        exclude 'eu/pb4/polymer/*/impl/**'
        exclude 'eu/pb4/polymer/*/mixin/**'
    }


    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.

        maven { url "https://jitpack.io" }
        maven { url "https://maven.nucleoid.xyz/" }
        maven { url "https://api.modrinth.com/maven"; content { includeGroup("maven.modrinth") } }
        maven { url "https://maven.gegy.dev/" }
        maven { url "https://maven.shedaniel.me/" }
        maven { url "https://maven.bai.lol" }
        maven { url "https://api.modrinth.com/maven" }
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
        maven { url "https://maven.enginehub.org/repo/" }
        maven { url "https://maven.theepicblock.nl"; content { includeGroup("nl.theepicblock") } }
        maven { url 'https://maven.wispforest.io/' }
        maven { url "https://cursemaven.com" }
        //maven { url "https://dvs1.progwml6.com/files/maven/" }
        maven { url "https://maven.terraformersmc.com/releases" }
        maven { url "https://maven.theepicblock.nl" }
        maven { url "https://repo.opencollab.dev/maven-snapshots/" }
        maven { url 'https://maven.ladysnake.org/releases' }
        maven { url = "https://repo.viaversion.com" }

        mavenLocal()
    }

    dependencies {
        // To change the versions see the gradle.properties file
        minecraft "com.mojang:minecraft:${project.minecraft_version}"
        compileOnly "net.fabricmc:fabric-loader:${project.loader_version}"
        localRuntime "net.fabricmc:fabric-loader:${project.loader_version}"

        compileOnly "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
        localRuntime "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
    }

    tasks.withType(JavaCompile).configureEach {
        // ensure that the encoding is set to UTF-8, no matter what the system default is
        // this fixes some edge cases with special characters not displaying correctly
        // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
        // If Javadoc is generated, this must be specified in that task too.
        it.options.encoding = "UTF-8"

        // The Minecraft launcher currently installs Java 8 for users, so your mod probably wants to target Java 8 too
        // JDK 9 introduced a new way of specifying this that will make sure no newer classes or methods are used.
        // We'll use that if it's available, but otherwise we'll use the older option.

        it.options.release = 25
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()
    }
}

subprojects {
    afterEvaluate {

    }
}

dependencies {
    api project(path: ":polymer-autohost")
    api project(path: ":polymer-core")
    api project(path: ":polymer-common")
    api project(path: ":polymer-resource-pack")
    api project(path: ":polymer-resource-pack-extras")
    api project(path: ":polymer-blocks")
    api project(path: ":polymer-virtual-entity")

    include(project(path: ":polymer-autohost"))
    include(project(path: ":polymer-core"))
    include(project(path: ":polymer-common"))
    include(project(path: ":polymer-resource-pack"))
    include(project(path: ":polymer-resource-pack-extras"))
    include(project(path: ":polymer-sound-patcher"))
    include(project(path: ":polymer-blocks"))
    include(project(path: ":polymer-virtual-entity"))
}


void setupRepositories(RepositoryHandler repositories) {
    def env = System.getenv()

    if (env.MAVEN_URL) {
        repositories.maven {
            credentials {
                username env.MAVEN_USERNAME
                password env.MAVEN_PASSWORD
            }
            url env.MAVEN_URL
        }
    } else {
        repositories.mavenLocal()
    }
}


var env = System.getenv()

publishMods {
    changelog = System.getenv("CHANGELOG")
    type = isStable ? STABLE : BETA
    file = jar.archiveFile
    modLoaders.add("fabric")

    if (System.getenv("CURSEFORGE")) {
        curseforge {
            projectId = "551890"
            accessToken = System.getenv("CURSEFORGE")
            client = true
            server = true
            requires("fabric-api")

            minecraftVersions.add((project.minecraft_version.contains("-") ? ((String) project.minecraft_version.split("-")[0] + "-snapshot") : project.minecraft_version))
            for (String a : project.mc_extra_supported.split(",")) {
                if (!a.strip().isEmpty()) {
                    minecraftVersions.add(a.strip())
                }
            }
        }
    }

    if (System.getenv("MODRINTH")) {
        modrinth {
            accessToken = System.getenv("MODRINTH")
            projectId = 'xGdtZczs'

            requires {
                slug "fabric-api"
            }

            minecraftVersions.add(project.minecraft_version);
            for (String a : project.mc_extra_supported.split(",")) {
                if (!a.strip().isEmpty()) {
                    minecraftVersions.add(a.strip())
                }
            }
        }
    }
}

// configure the maven publication

allprojects {
    apply plugin: 'maven-publish'

    processResources {
        doLast {
            fileTree(dir: outputs.files.asPath, include: "**/*.json").each {
                File file -> file.text = com.google.gson.JsonParser.parseString(file.text).toString()
            }
        }
    }

    classes {
        doLast {
            fileTree(dir: project.sourceSets.main.output.classesDirs.asPath, include: "**/*.json").each {
                File file -> file.text = com.google.gson.JsonParser.parseString(file.text).toString()
            }
        }
    }

    jar {
        doLast {
            fileTree(dir: outputs.files.asPath, include: "**/*.json").each {
                File file -> file.text = com.google.gson.JsonParser.parseString(file.text).toString()
            }
        }
    }

    afterEvaluate {
        if (project.version != "0.0.0-alpha.0") {
            publishing {
                publications {
                    mavenJava(MavenPublication) {
                        groupId = rootProject.maven_group
                        artifactId = project.base.archivesName.get()
                        version = project.version

                        from components.java
                    }

                }

                setupRepositories(repositories)
            }
        }
    }
}
catalog {
    // declare the aliases, bundles and versions in this block
    versionCatalog {
        version('polymer', project.version.toString())
        library('polymer-autohost', 'eu.pb4', 'polymer-autohost').versionRef('polymer')
        library('polymer-blocks', 'eu.pb4', 'polymer-blocks').versionRef('polymer')
        library('polymer-bundled', 'eu.pb4', 'polymer-bundled').versionRef('polymer')
        library('polymer-common', 'eu.pb4', 'polymer-common').versionRef('polymer')
        library('polymer-core', 'eu.pb4', 'polymer-core').versionRef('polymer')
        library('polymer-networking', 'eu.pb4', 'polymer-networking').versionRef('polymer')
        library('polymer-regsyncmanipulator', 'eu.pb4', 'polymer-reg-sync-manipulator').versionRef('polymer')
        library('polymer-resourcepack-extras', 'eu.pb4', 'polymer-resource-pack-extras').versionRef('polymer')
        library('polymer-resourcepack', 'eu.pb4', 'polymer-resource-pack').versionRef('polymer')
        library('polymer-soundpatcher', 'eu.pb4', 'polymer-sound-patcher').versionRef('polymer')
        library('polymer-virtualentity', 'eu.pb4', 'polymer-virtual-entity').versionRef('polymer')
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = rootProject.maven_group
            artifactId = "polymer-catalog"
            version = project.version
            from components.versionCatalog
        }
    }
}
